syntax = "proto3";

package varlog;

option go_package = "github.daumkakao.com/varlog/varlog/proto/varlog";

message ErrorDetail {
    string desc = 1;
    bool is_varlog_error = 2;
}
